<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_20dp"
    android:layout_height="118dp"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/iv_hrvy"
            android:layout_marginStart="@dimen/_20dp"
            app:layout_constraintBottom_toBottomOf="@id/cl_user"
            app:layout_constraintStart_toStartOf="@id/cl_user"
            app:layout_constraintTop_toTopOf="@id/cl_user" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/txt_harvey_leigh_cantwell"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cl_user"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_user"
            app:layout_constraintTop_toTopOf="@id/cl_user" />

        <TextView
            android:id="@+id/tv_job_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3dp"
            android:text="@string/txt_flutter_developer"
            app:layout_constraintEnd_toEndOf="@+id/tv_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"/>

        <TextView
            android:id="@+id/tv_location_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/txt_uk"
            app:layout_constraintBottom_toBottomOf="@id/cl_user"
            app:layout_constraintStart_toStartOf="@+id/tv_job_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_job_user" />
        <TextView
            android:id="@+id/tv_email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_hrvy_gmail_com"
            app:layout_constraintBottom_toBottomOf="@+id/tv_location_user"
            app:layout_constraintEnd_toEndOf="@id/cl_user"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_location_user"
            app:layout_constraintTop_toTopOf="@+id/tv_location_user"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="@dimen/_10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>